# backend-template

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  noxfile.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1a451fe4a96b_new_migration.py  40739a580bac_trying_to_add_users_table.py  4239d87582b1_trying_to_add_users_table.py  82ff255c5e1e_.py  aae60af8b786_trying_to_add_users_table.py  d5c36a0736ad_create_inital_tables.py  dfc2648445a7_.py  e43db0de5757_trying_to_add_users_table.py
app/api/endpoints/: users.py
app/crud/: base.py  crud_user.py  crud_users.py
app/db/: base.py  database.py
app/models/: user.py  users.py
app/schemas/: user.py  users.py
