[tool.poetry]
name = "backend-template"
version = "0.1.0"
description = "Backend template for Spotifiuba"
authors = ["luciakasman <lucia.kasman@muttdata.ai>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
